--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Simple-CV" content="A simple CV template built with HTML and CSS."> 
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -39,24 +40,29 @@
             <h3>Experience</h3>
             <h3 class="blue">CTI - Ermita Manila - Intern</h3>
             <date>2020 - 2021</date>
-            <li>Assisted in maintaining and updating company websites</li>
-            <li>Collaborated with team members to improve user experience</li>
-            <li>Learned and applied basic web development practices</li>
+            <ul>
+                <li>Assisted in maintaining and updating company websites</li>
+                <li>Collaborated with team members to improve user experience</li>
+                <li>Learned and applied basic web development practices</li>
+            </ul>
             <p>Customer support, Web development</p>
-
 
             <h3 class="blue">SP Mandrid</h3>
             <date>2020 - 2021</date>
-            <li>Assisted in maintaining and updating company websites</li>
-            <li>Collaborated with team members to improve user experience</li>
-            <li>Learned and applied basic web development practices</li>
+            <ul>
+                <li>Assisted in maintaining and updating company websites</li>
+                <li>Collaborated with team members to improve user experience</li>
+                <li>Learned and applied basic web development practices</li>
+            </ul>
             <p>Customer support, Web development</p>
 
         </section>
         
         <footer>
-            <li><a href="https://www.linkedin.com/in/cedric-bagaipo-9b1a4b1b3/">LinkedIn</a></li>
-            <li><a href="https://github.com/cedricbagaipo">GitHub</a></li>
+            <a href="https://www.linkedin.com/in/cedric-bagaipo-9b1a4b1b3/" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/cedricbagaipo" title="GitHub"><i class="fab fa-github"></i></a>
+            <a href="#" title="Facebook"><i class="fab fa-facebook"></i></a>
+            <a href="#" title="Instagram"><i class="fab fa-instagram"></i></a>
         </footer>
 
     </main>
